Implement customer portal critical journey
